refactor: #30 - 채점 로직 및 아키텍처 변경
- 객관식 문제일 경우 답의 값으로 채점하는 것이 아니라 정답으로 설정한 선택지의 id를 비교할 수 있도록 로직 변경
- 문제타입별로 답안 객체를 따로 생성
- 문제타입별로 문제채점 객체를 따로 생성