@@ -1,8 +1,15 @@
 package com.poolaeem.poolaeem.solve.infra;
 
 import com.poolaeem.poolaeem.question.application.ProblemService;
+import com.poolaeem.poolaeem.question.domain.entity.ProblemType;
+import com.poolaeem.poolaeem.question.domain.entity.vo.ProblemOptionVo;
 import com.poolaeem.poolaeem.question.domain.entity.vo.ProblemVo;
-import com.poolaeem.poolaeem.solve.domain.ProblemGrading;
+import com.poolaeem.poolaeem.solve.domain.dto.SelectAnswer;
+import com.poolaeem.poolaeem.solve.domain.vo.answer.MultipleOptionAnswer;
+import com.poolaeem.poolaeem.solve.domain.vo.answer.SubjectiveAnswer;
+import com.poolaeem.poolaeem.solve.domain.vo.problem.CheckBoxProblem;
+import com.poolaeem.poolaeem.solve.domain.vo.problem.ProblemGrading;
+import com.poolaeem.poolaeem.solve.domain.vo.problem.SubjectiveProblem;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -21,9 +28,20 @@ public class GradingWorkbookClientImpl implements GradingWorkbookClient {
     @Override
     public Map<String, ProblemGrading> getCorrectAnswers(String workbookId) {
         List<ProblemVo> problems = problemService.getCorrectAnswers(workbookId);
-        // 정답 비교를 위해 소문자로 변환
         return problems.stream()
-                .map(problem -> new ProblemGrading(problem.getProblemId(), problem.getType(), problem.getOptions().stream().map(option -> option.getValue().toLowerCase()).toList()))
+                .map(problem -> {
+                    // 문제 타입별로 문제채점 클래스를 생성
+                    if (problem.getType() == ProblemType.CHECKBOX) {
+                        return new CheckBoxProblem(problem.getProblemId(), problem.getType(),
+                                new MultipleOptionAnswer(problem.getOptions().stream()
+                                        .map(option -> new SelectAnswer(option.getOptionId(), option.getValue()))
+                                        .collect(Collectors.toList())
+                                )
+                        );
+                    }
+                    return new SubjectiveProblem(problem.getProblemId(), problem.getType(), new SubjectiveAnswer(problem.getOptions().stream().map(ProblemOptionVo::getValue).toList()));
+                })
                 .collect(Collectors.toMap(ProblemGrading::getProblemId, Function.identity()));
     }
+
 }
